Update tests.